Start design refresh

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <header id="header-main">
   <div id="header-main-inner">
-    <div id="home"><a href="http://phillipridlen.com">&larr; Phillip Ridlen</a></div>
-    <h1 id="title"><a href="{{ site.base-url }}/">The Blog</a></h1>
+    <h1 id="title"><a href="{{ site.base-url }}/">Phillip Ridlen</a></h1>
   </div>
 </header>
 
