--- a/_less/colors.less
+++ b/_less/colors.less
@@ -4,6 +4,7 @@
 @accent1: #999999;
 @accent2: #777777;
 @accent3: #E71A5D;
+@accent4: @textcolor + #333;
 @highlight: #F7F7F7;
 @bordercolor: @bgcolor - #191919;
 @unimportant: @bgcolor - #777;
