--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -3,8 +3,8 @@
 @fancy: "bello-pro-1","bello-pro-2", @sans;
 @copy: @sans;
 @display: @sans;
-@code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
-@basefont: 14px;
+@code: "source-code-pro-1", "source-code-pro-2", "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
+@basefont: 18px;
 @padding: @basefont * 2;
-@bigheading: @basefont * 3;
+@bigheading: 300%;
 @lineheight: 1.75;
