--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -4,6 +4,7 @@
 @copy: @sans;
 @display: @sans;
 @code: "source-code-pro-1", "source-code-pro-2", "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
+@iconfont: "icomoon";
 @basefont: 18px;
 @padding: @basefont * 2;
 @bigheading: 300%;
