--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,44 @@
+@font-face {
+  font-family: 'icomoon';
+  src: url('../fonts/icomoon.eot');
+  src: url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'), url('../fonts/icomoon.svg#icomoon') format('svg'), url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+  font-family: 'icomoon';
+  content: attr(data-icon);
+  speak: none;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+/* Use the following CSS code if you want to have a class per icon */
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: 'icomoon';
+  font-style: normal;
+  speak: none;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-dribbble:before {
+  content: "\64";
+}
+.icon-github:before {
+  content: "\67";
+}
+.icon-mail:before {
+  content: "\65";
+}
+.icon-twitter:before {
+  content: "\74";
+}
+.icon-facebook:before {
+  content: "\66";
+}
 .heading {
   font-family: "proxima-nova-1", "proxima-nova-2", sans-serif;
   line-height: 1;
@@ -18,6 +59,92 @@
   border-top: 1px solid #e6e6e6;
   margin-top: 36px;
   padding-top: 36px;
+}
+label {
+  clear: left;
+  display: block;
+  float: left;
+  font-size: 18px;
+  width: 150px;
+}
+input,
+textarea,
+button {
+  float: left;
+  font-family: "proxima-nova-1", "proxima-nova-2", serif;
+  font-size: 18px;
+  margin-bottom: 1.5em;
+  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
+  -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+  transition: border linear 0.2s, box-shadow linear 0.2s;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  display: inline-block;
+  padding: 4px;
+  font-size: 13px;
+  line-height: 18px;
+  color: gray;
+  border: 1px solid #CCC;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+input[type=text] {
+  width: 270px;
+}
+textarea {
+  height: 300px;
+  width: 600px;
+}
+form p {
+  margin: 1em 0 0 0;
+}
+form p.actions {
+  margin: 0 0 0 150px;
+}
+button {
+  clear: both;
+  float: left;
+  cursor: pointer;
+  display: inline-block;
+  background-color: #e6e6e6;
+  background-repeat: no-repeat;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+  background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
+  background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+  background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+  background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+  padding: 5px 14px 6px;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  color: #333;
+  font-size: 13px;
+  line-height: normal;
+  border: 1px solid #ccc;
+  border-bottom-color: #bbb;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -webkit-transition: 0.1s linear all;
+  -moz-transition: 0.1s linear all;
+  -ms-transition: 0.1s linear all;
+  -o-transition: 0.1s linear all;
+  transition: 0.1s linear all;
+}
+button:hover {
+  background-position: 0 -15px;
+  color: #333;
+  text-decoration: none;
+}
+button:focus {
+  outline: 1px dotted #666;
 }
 .hll {
   background-color: #ffffcc;
@@ -321,12 +448,22 @@ header#header-main a {
 }
 header#header-main #header-main-inner {
   max-width: 800px;
-  margin: 0 auto;
 }
 header#header-main #header-main-inner h1 {
   font-weight: 300;
   font-size: 150%;
   margin: 0;
+}
+header#header-main .social {
+  font-family: "icomoon";
+  font-size: 133%;
+  line-height: 1.75;
+}
+header#header-main .social a {
+  color: #264e59;
+}
+header#header-main .social a:hover {
+  color: #e71a5d;
 }
 header a {
   text-decoration: none;
@@ -471,12 +608,14 @@ article.video iframe {
 }
 footer {
   font-family: "proxima-nova-1", "proxima-nova-2", sans-serif;
-  font-size: 18px;
   clear: both;
   max-width: 800px;
 }
 footer a {
   text-decoration: none;
+}
+section#intro {
+  margin: 1em 0;
 }
 #post article {
   padding-bottom: 0;
@@ -575,18 +714,22 @@ dl.posts {
   margin-bottom: 36px;
   padding-bottom: 36px;
   float: left;
+  line-height: 1;
   margin-top: 0;
   width: 100%;
 }
 dl.posts dt {
+  color: #666666;
   clear: left;
   float: left;
+  font-size: 75%;
   font-weight: 300;
+  line-height: 1.3333333333333333;
   width: 126px;
 }
 dl.posts dd {
-  float: left;
-  margin-left: 1ex;
+  margin-left: 126px;
+  margin-bottom: .75em;
 }
 dl.posts dd a {
   text-decoration: none;
@@ -606,11 +749,25 @@ dl.posts dd a {
     margin-left: 0;
   }
   header#header-main {
-    padding: 0 36px;
+    float: left;
     position: static;
+    width: 100%;
+  }
+  header#header-main #header-main-inner {
+    padding: 0 36px;
+  }
+  header#header-main h1 {
+    float: left;
+  }
+  header#header-main .social {
+    line-height: 1;
+    float: right;
   }
   section#content {
     margin-top: 18px;
+    padding: 0 36px;
+  }
+  footer {
     padding: 0 36px;
   }
 }
