--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,13 @@
 <header id="header-main">
   <div id="header-main-inner">
     <h1 id="title"><a href="{{ site.base-url }}/">Phillip Ridlen</a></h1>
+    <p class="social">
+      <a href="https://github.com/philtr">g</a>
+      <a href="http://dribbble.com/philtr">d</a>
+      <a href="https://facebook.com/philtr">f</a>
+      <a href="http://twitter.com/philtr">t</a>
+      <a href="/contact">e</a>
+    </p>
   </div>
 </header>
 
