--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="{{ site.base-url }}/css/main.css" />
-<script src="http://use.typekit.com/cak6cdh.js"></script>
+<script src="http://use.typekit.com/cqd2pnd.js"></script>
 <script src="{{ site.base-url }}/js/all.js"></script>
