--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -1,9 +1,9 @@
-@sans: "proxima-nova-1", "proxima-nova-2", sans-serif;
-@serif: "Palatino", "Palatino Linotype" "URW Palladio L", serif;
-@fancy: "bello-pro-1","bello-pro-2", @sans;
-@copy: @sans;
+@sans: "brandon-grotesque", sans-serif;
+@serif: "garamond-premier-pro", "Palatino", "Palatino Linotype" "URW Palladio L", serif;
+@fancy: @sans;
+@copy: @serif;
 @display: @sans;
-@code: "source-code-pro-1", "source-code-pro-2", "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
+@code: "source-code-pro", "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
 @iconfont: "icomoon";
 @basefont: 18px;
 @padding: @basefont * 2;
