--- a/_less/main.less
+++ b/_less/main.less
@@ -19,18 +19,22 @@ body {
   margin-left: 15 * @basefont;
   margin-top: @basefont;
   padding: 0; }
-  
+
 header {
   &#header-main {
-    color: @accent4;
-    left: @basefont * 2;
+    background: @linkcolor;
+    color: @bgcolor;
+    height: 100%;
+    left: 0;
     line-height: 1;
     margin: 0;
+    padding-left: @basefont * 2;
+    padding-top: @basefont;
     position: fixed;
-    top: @basefont;
-    width: @basefont * 12;
-    a { color: @accent4; }
-    #header-main-inner { 
+    top: 0;
+    width: @basefont * 11;
+    a { color: @bgcolor; }
+    #header-main-inner {
       max-width: @content-width;
       h1 {
         font-weight: 300;
@@ -40,7 +44,7 @@ header {
       font-family: "icomoon";
       font-size: 133%;
       line-height: @lineheight;
-      a { color: @linkcolor; }
+      a { color: #abb; }
       a:hover { color: @accent3; } } }
   a { text-decoration: none; }
 }
@@ -218,9 +222,10 @@ dl.posts { .dividerBottom;
 @first-breakpoint: @content-width + @basefont*15;
 
 @media all and (max-width: @first-breakpoint) {
-  body { margin-left: 0; }
+  body { margin: 0; }
   header#header-main {
     float: left;
+    padding-left: 0;
     position: static;
     width: 100%;
     #header-main-inner { padding: 0 @basefont * 2; }
@@ -229,8 +234,9 @@ dl.posts { .dividerBottom;
       line-height: 1;
       float: right; } }
   section#content {
+    clear: both;
     margin-top: @basefont;
-    padding: 0 @basefont * 2; }
+    padding: @basefont @basefont*2; }
   footer {
     padding: 0 @basefont*2; }
 }
