--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -1,7 +1,7 @@
 @sans: "brandon-grotesque", sans-serif;
-@serif: "garamond-premier-pro", "Palatino", "Palatino Linotype" "URW Palladio L", serif;
+@serif: "Palatino", "Palatino Linotype" "URW Palladio L", serif;
 @fancy: @sans;
-@copy: @serif;
+@copy: @sans;
 @display: @sans;
 @code: "source-code-pro", "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
 @iconfont: "icomoon";
