--- a/_less/main.less
+++ b/_less/main.less
@@ -15,6 +15,7 @@ body {
   color: @textcolor;
   font-family: @copy;
   font-size: @basefont;
+  font-weight: 200;
   line-height: @lineheight;
   margin-left: 15 * @basefont;
   margin-top: @basefont;
@@ -37,9 +38,10 @@ header {
     #header-main-inner {
       max-width: @content-width;
       h1 {
-        font-weight: 300;
-        font-size: 150%; 
-        margin: 0; } }
+        font-weight: 700;
+        font-size: 150%;
+        margin: 0; 
+        -webkit-font-smoothing: antialiased; } }
     .social {
       font-family: "icomoon";
       font-size: 133%;
