Fix header for mobile display;

--- a/_less/main.less
+++ b/_less/main.less
@@ -248,7 +248,7 @@ dl.posts { .dividerBottom;
     position: static;
     width: 100%;
     #header-main-inner { padding: 0 @basefont * 2; }
-    h1 { float: left; }
+    h1 { float: left; font-size: 100%; margin-top: 3px; }
     .social {
       line-height: 1;
       float: right; } }
