Ok this time I really fixed it.
But it still needs a little more work

--- a/_less/main.less
+++ b/_less/main.less
@@ -247,11 +247,14 @@ dl.posts { .dividerBottom;
     padding-left: 0;
     position: static;
     width: 100%;
-    #header-main-inner { padding: 0 @basefont * 2; }
-    h1 { float: left; font-size: 100%; margin-top: 3px; }
-    .social {
-      line-height: 1;
-      float: right; } }
+    #header-main-inner {
+      padding: 0 @basefont * 2;
+      h1 { float: left; font-size: 100%; margin-top: 3px; }
+      .social {
+        line-height: 1;
+        float: right; }
+      }
+    }
   section#content {
     clear: both;
     margin-top: @basefont;
