--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,4 @@
 <footer>
-  <p>Original content is <a
-  href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
-  Attribution-NonCommercial 3.0">Creative Commons <img id="license"
-  src="{{ site.base-url }}/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2013 Phillip T.
-  Ridlen.</p>
+  <p>Original content <a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
+  Attribution-NonCommercial 3.0" class="cc-icons">cbn</a> 2010-2013 Phillip T. Ridlen.</p>
 </footer>
