--- a/_less/fonts.less
+++ b/_less/fonts.less
@@ -1,3 +1,22 @@
+@font-face {
+    font-family: 'Creative Commons Icons';
+    src: url('cc-icons/cc-icons-webfont.eot');
+    src: url('cc-icons/cc-icons-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cc-icons/cc-icons-webfont.woff') format('woff'),
+         url('cc-icons/cc-icons-webfont.ttf') format('truetype'),
+         url('cc-icons/cc-icons-webfont.svg#cc_iconsregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.cc-icons {
+  font-family: 'Creative Commons Icons';
+  letter-spacing: 2px;
+  position: relative;
+  bottom: -2px;
+}
+
 @sans: "brandon-grotesque", sans-serif;
 @serif: "Palatino", "Palatino Linotype" "URW Palladio L", serif;
 @fancy: @sans;
@@ -9,3 +28,4 @@
 @padding: @basefont * 2;
 @bigheading: 300%;
 @lineheight: 1.75;
+
