Fix main contact form styles

--- a/_less/main.less
+++ b/_less/main.less
@@ -170,6 +170,10 @@ section#intro {
 }
 
 #contact { 
+  .donthidemeplzkthx & {
+    display: block;
+    .alt-action { display: none; }
+  }
   .rounded-corners(5px);
   background: #FFE;
   border: 1px solid #eed;
