--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -22,6 +22,6 @@
       </tr>
     </table>
     <input type="submit" value="Send Message" onclick="_gaq.push(['_trackEvent', 'comment', 'submitted'])"/>
-    or <a href="{{ page.url }}" id="cancel_email" onclick="_gaq.push(['_trackEvent', 'comment', 'canceled'])"/>Cancel</a>
+    <span class="alt-action">or <a href="{{ page.url }}" id="cancel_email" onclick="_gaq.push(['_trackEvent', 'comment', 'canceled'])"/>Cancel</a></a>
   </form>
 </aside>
