Fix notice styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,11 @@
     {% include header.html %}
 
     <section id="content">
+      <div id="notice">
+        <span class="content"></span>
+        <span class="close"><a href="#">Close</a></span>
+      </div>
+
       {{ content }}
     </section>
 
