--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
-  <p>Original content <a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
-  Attribution-NonCommercial 3.0" class="cc-icons">cbn</a> 2010-2013 Phillip T. Ridlen.</p>
+  <p><a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons
+  Attribution-NonCommercial 3.0" class="cc-icons">cbn</a></p>
 </footer>
