Use Skolar for body text

--- a/css/main.css
+++ b/css/main.css
@@ -354,7 +354,7 @@ html {
 body {
   background: #ffffff;
   color: #555555;
-  font-family: "brandon-grotesque", sans-serif;
+  font-family: "skolar", "brandon-grotesque", sans-serif;
   font-size: 18px;
   font-weight: 200;
   line-height: 1.75;
