--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="{{ site.base-url }}/css/main.css" />
-<script src="http://use.typekit.com/cqd2pnd.js"></script>
+<script type="text/javascript" src="//use.typekit.net/uwc3ots.js"></script>
 <script src="{{ site.base-url }}/js/all.js"></script>
