--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@
   bottom: -2px;
 }
 .heading {
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   line-height: 1;
 }
 .heading a {
@@ -354,7 +354,7 @@ html {
 body {
   background: #ffffff;
   color: #555555;
-  font-family: "freight-sans-pro", "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", "freight-sans-pro", sans-serif;
   font-size: 18px;
   font-weight: 200;
   line-height: 1.75;
@@ -407,7 +407,7 @@ section#content {
   max-width: 800px;
 }
 h1 {
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   line-height: 1;
   font-size: 300%;
 }
@@ -415,7 +415,7 @@ h1 a {
   text-decoration: none;
 }
 h2 {
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   line-height: 1;
   font-size: 150%;
   margin: 0;
@@ -424,7 +424,7 @@ h2 a {
   text-decoration: none;
 }
 h3 {
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   line-height: 1;
   font-size: 120%;
 }
@@ -504,7 +504,7 @@ article h2 {
 article time {
   color: #777777;
   display: block;
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-size: 18px;
   font-weight: 100;
   letter-spacing: 0;
@@ -540,7 +540,7 @@ article.video iframe {
   width: 550px;
 }
 footer {
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   clear: both;
   max-width: 800px;
 }
@@ -575,7 +575,7 @@ section#intro {
 }
 #paginator {
   float: left;
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   padding-bottom: 36px;
   width: 100%;
 }
@@ -609,7 +609,7 @@ section#intro {
   border: 1px solid #eed;
   color: #555555;
   display: none;
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-style: normal;
   font-weight: 200;
   padding: 18px;
@@ -636,7 +636,7 @@ section#intro {
   -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
   color: #555555;
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-size: 18px;
   font-weight: 200;
   padding: 6px;
@@ -656,7 +656,7 @@ input[type="submit"] {
   border: none;
   color: #ffffff;
   cursor: pointer;
-  font-family: "frieght-sans-pro", sans-serif;
+  font-family: "freight-sans-pro", sans-serif;
   font-size: 18px;
   padding: 10px 20px;
 }
