--- a/css/main.css
+++ b/css/main.css
@@ -549,6 +549,7 @@ footer a {
 }
 section#intro {
   margin: 1em 0;
+  font-size: 24px;
 }
 #post article {
   padding-bottom: 0;
@@ -738,5 +739,9 @@ dl.posts dd a {
 @media all and (max-width: 800px) {
   body {
     font-size: 16px;
+  }
+  
+  section#intro {
+    font-size: 20px;
   }
 }
