--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="{{ site.base-url }}/css/main.css" />
+<link rel="stylesheet" href="{{ site.base-url }}/assets/css/main.css" />
 <script type="text/javascript" src="//use.typekit.net/uwc3ots.js"></script>
-<script src="{{ site.base-url }}/js/all.js"></script>
+<script src="{{ site.base-url }}/assets/js/all.js"></script>
