--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,7 +353,7 @@ html {
   padding: 0;
 }
 body {
-  background: #555 url("/img/hero.jpg") no-repeat;
+  background: #555 url("../img/hero.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   color: #eee;
