--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: notes
   <article class="{{ page.type }}">
     <header>
       <h2><a href="{{ site.base-url }}{{ page.url }}">{{ page.title }}</a></h2>
-      <time datetime="{{ page.date }}">First published on {{ page.date | date: '%B %d, %Y' }}</time>
+      <time datetime="{{ page.date }}">Published on {{ page.date | date: '%B %d, %Y' }}</time>
     </header>
 
     {{ content }}
