Add tutti frutti syntax highlighting

--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -7,6 +7,7 @@
     <link href="http://feeds.feedburner.com/philtrblog" rel="alternate" title="Phillip's Blog" type="application/atom+xml" />
 
     <link rel="stylesheet" href="{{ site.base-url}}/assets/css/notes.css" />
+    <link rel="stylesheet" media="screen,projector" href="https://cdn.rawgit.com/chrissealey/tutti-frutti/master/tutti-frutti.css" />
 
     <script>
       {% include js/ga.js %}
